--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -98,6 +98,20 @@
             app:iconPadding="0dp"
             android:layout_weight="1" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/select"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@drawable/ic_select"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            android:layout_weight="1" />
+
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
