--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="fill_select">#666480FF</color>
     <color name="stroke_select">#CD3A57FF</color>
+
+
+    <color name="stroke_select2">#0000FE</color>
+
+
 </resources>
