--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -114,4 +114,19 @@
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
+    <com.shawnlin.numberpicker.NumberPicker
+        android:id="@+id/number_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:np_width="200dp"
+        app:np_height="50dp"
+        app:np_dividerColor="@color/teal_700"
+        app:np_selectedTextColor="@color/purple_200"
+        app:np_selectedTextSize="20sp"
+        app:np_textColor="@color/purple_200"
+        app:np_textSize="20sp"
+        app:np_orientation="horizontal"
+        app:np_value="15" />
+
 </LinearLayout>
