--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -93,7 +93,7 @@
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
-            app:icon="@drawable/ic_move"
+            app:icon="@drawable/ic_color"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             android:layout_weight="1" />
@@ -112,21 +112,61 @@
             app:iconPadding="0dp"
             android:layout_weight="1" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@drawable/ic_text"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            android:layout_weight="1" />
+
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
-    <com.shawnlin.numberpicker.NumberPicker
-        android:id="@+id/number_picker"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:np_width="200dp"
-        app:np_height="50dp"
-        app:np_dividerColor="@color/teal_700"
-        app:np_selectedTextColor="@color/purple_200"
-        app:np_selectedTextSize="20sp"
-        app:np_textColor="@color/purple_200"
-        app:np_textSize="20sp"
-        app:np_orientation="horizontal"
-        app:np_value="15" />
+        android:orientation="horizontal">
+
+        <com.shawnlin.numberpicker.NumberPicker
+            android:id="@+id/number_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:np_dividerColor="@color/teal_700"
+            app:np_height="50dp"
+            app:np_orientation="horizontal"
+            app:np_selectedTextColor="@color/purple_200"
+            app:np_selectedTextSize="20sp"
+            app:np_textColor="@color/purple_200"
+            app:np_textSize="20sp"
+            app:np_value="15"
+            app:np_width="200dp" />
+
+        <ImageButton
+            android:id="@+id/image_button_undo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:src="@drawable/ic_undo" />
+
+        <ImageButton
+            android:id="@+id/image_button_redo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:src="@drawable/ic_redo" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
